# list-routines

./: .gitignore  Cargo.toml  README.md  hosting.md  index.md  listroutines.py  routines.graph  routines.md  subroutines.md
etc/: Makefile  TODO.md  clean_static.vim  docs_generate.rkt  docs_template_main.md  docs_template_routine.md  docs_template_routine_nonparametric.md  docs_template_routine_parametric.md  docs_template_subroutine.md  docs_template_subroutine_nonparametric.md  docs_template_subroutine_parametric.md  generate_docs.rkt  generate_graph.rkt  generate_static.rkt  graph_generate.rkt  paper.tex  spec.txt  static_generate.rkt
py/: .gitignore  listroutines.py  setup.py
src/: _update.py  api.rkt  api.rs  dag.rkt  graph.rs  lib.rs  loader.rkt  main.rkt  main.rs  main_cli.rkt  main_repl.rkt  main_static.rkt  prelude.rkt  routine.rkt  routine.rs  store.rs  subroutines.rkt  type.rkt  update_subroutines.py
src/racket/: _update.py  loader.rkt
src/routines/: add-k.rkt  add2.rkt  append-k.rkt  append2.rkt  caesar-cipher-k-modulo-n.rkt  count-head-in-tail.rkt  count-k.rkt  count2.rkt  dedup.rkt  drop-k.rkt  dup.rkt  evens.rkt  has-head-in-tail.rkt  has-k.rkt  head-in-tail.rkt  head.rkt  index-head.rkt  index-k.rkt  intersperse-k.rkt  is-evens.rkt  is-mod-k.rkt  is-odds.rkt  is-primes.rkt  is-squares.rkt  keep-mod-head.rkt  keep-mod-k.rkt  kth-largest.rkt  kth-smallest.rkt  last.rkt  len.rkt  max.rkt  min.rkt  modulo-k.rkt  mult-k.rkt  mult2.rkt  odds.rkt  pop.rkt  prepend-k.rkt  prepend2.rkt  product.rkt  (+14 more)
src/subroutines/: add-k.rkt  dedup.rkt  (+51 more)
tests/: tests.rs
(+67 files in other folders)
