[package]
name = "list-routines"
version = "0.1.0"
authors = ["Lucas Morales <lucas@lucasem.com>"]

[dependencies]
itertools = "0.7.1"
lazy_static = "0.2"
rocket_codegen = { git = "https://github.com/lucasem/Rocket.git", branch = "empty-query" }
rocket = { git = "https://github.com/lucasem/Rocket.git", branch = "empty-query" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
